# smuxi-head-mirror

lib/JabbR/JabbR.Client/: JabbR.Client.csproj  JabbRClient.cs
lib/Newtonsoft.Json/Src/Newtonsoft.Json/: Newtonsoft.Json.csproj
lib/ServiceStack.Text/src/ServiceStack.Text/: ServiceStack.Text.csproj
lib/ServiceStack/src/ServiceStack/: ServiceStack.csproj
lib/ServiceStack/src/ServiceStack.Common/: ServiceStack.Common.csproj
lib/ServiceStack/src/ServiceStack.Interfaces/: ServiceStack.Interfaces.csproj
lib/SignalR/src/Microsoft.AspNet.SignalR.Client/: Connection.cs  Microsoft.AspNet.SignalR.Client.csproj
lib/SignalR/src/Microsoft.AspNet.SignalR.Core/: Microsoft.AspNet.SignalR.Core.csproj
lib/Twitterizer/Twitterizer.OAuth/Properties/: AssemblyInfo.cs
lib/Twitterizer/Twitterizer2/: Twitterizer2.csproj
lib/Twitterizer/Twitterizer2.Async/: TwitterAsyncResponse.cs
lib/Twitterizer/Twitterizer2.Streaming/: TwitterStream.cs  Twitterizer2.Streaming.csproj
lib/Twitterizer/Twitterizer2/Core/: TwitterCommand.cs
lib/Twitterizer/Twitterizer2/Exceptions/: TwitterizerException.cs
lib/db4o-net/Db4oBench/: Db4oBench-2008.csproj  Db4oBench-2010.csproj  Db4oBench-CF-2008.csproj
lib/db4o-net/Db4oBench/Bench/: IoBenchmark.cs
lib/db4o-net/Db4oBench/Properties/: AssemblyInfo.cs
lib/db4o-net/Db4oTool/Db4oTool/: Db4oTool-2008.csproj  Db4oTool-2010.csproj
lib/db4o-net/Db4oTool/Db4oTool.MSBuild/: Db4oTool.MSBuild-2008.csproj  Db4oTool.MSBuild-2010.csproj
lib/db4o-net/Db4oTool/Db4oTool.Tests/: AllTests.cs  Db4oTool.Tests-2008.csproj  Db4oTool.Tests-2010.csproj  ProgramOptionsTestCase.cs
lib/db4o-net/Db4oTutorial/Db4objects.Db4o.Tutorial/: AssemblyInfo.cs  WebBrowserViewControl.cs  WebBrowserViewControl.resx
lib/db4o-net/Db4oTutorial/Db4objects.Db4o.Tutorial.Console/: AssemblyInfo.cs
lib/db4o-net/Db4oUnit/: Db4oUnit-2008.csproj  Db4oUnit-2010.csproj  Db4oUnit-CF-2008.csproj  Db4oUnit-Silverlight-2008.csproj  Db4oUnit-Silverlight-2010.csproj
lib/db4o-net/Db4oUnit.Extensions/: Db4oUnit.Extensions-2008.csproj  Db4oUnit.Extensions-2010.csproj  Db4oUnit.Extensions-CF-2008.csproj  Db4oUnit.Extensions-Silverlight-2008.csproj  Db4oUnit.Extensions-Silverlight-2010.csproj
lib/db4o-net/Db4oUnit.Extensions/Db4oUnit.Extensions/: AbstractDb4oTestCase.cs  AbstractInMemoryDb4oTestCase.cs  BTreeAssert.cs  ComposibleReflectionTestSuite.cs  ComposibleTestSuite.cs  ContainerServices.cs  Db4oAssert.cs  Db4oClientServerTestCase.cs  Db4oConcurrencyTestCase.cs  Db4oConcurrencyTestSuite.cs  Db4oFixtureVariable.cs  Db4oTestSuite.cs  Db4oTestSuiteBuilder.cs  ExcludingReflector.cs  ExpectingVisitor.cs  FieldIndexAssert.cs  FreespaceManagerForDebug.cs  IContainerBlock.cs  IDb4oFixture.cs  IDb4oTestCase.cs  IFixtureConfiguration.cs  IOptOutAndroid.cs  IOptOutBigMathIssue.cs  IOptOutExcludingClassLoaderIssue.cs  IOptOutNotSupportedJavaxManagement.cs  IOptOutStackOverflowIssue.cs  IOptOutTA.cs  IOptOutVerySlow.cs  IOptOutWorkspaceIssue.cs  IRuntimeConfigureAction.cs  ISlotListener.cs  IntArrays4.cs  ObjectSetAssert.cs  TAFixtureConfiguration.cs
lib/db4o-net/Db4oUnit.Extensions/Properties/: AssemblyInfo.cs
lib/db4o-net/Db4oUnit/Properties/: AssemblyInfo.cs
lib/db4o-net/Db4objects.Db4o/: Db4objects.Db4o-2008.csproj  Db4objects.Db4o-2010.csproj  Db4objects.Db4o-CF-2008.csproj  Db4objects.Db4o-Silverlight-2008.csproj  Db4objects.Db4o-Silverlight-2010.csproj
lib/db4o-net/Db4objects.Db4o.CS/: Db4objects.Db4o.CS-2008.csproj  Db4objects.Db4o.CS-2010.csproj  Db4objects.Db4o.CS-CF-2008.csproj
lib/db4o-net/Db4objects.Db4o.CS.Optional/: Db4objects.Db4o.CS.Optional-2008.csproj  Db4objects.Db4o.CS.Optional-2010.csproj  Db4objects.Db4o.CS.Optional-CF-2008.csproj
lib/db4o-net/Db4objects.Db4o.CS.Optional/Properties/: AssemblyInfo.cs
lib/db4o-net/Db4objects.Db4o.CS/Properties/: AssemblyInfo.cs
lib/db4o-net/Db4objects.Db4o.Data.Services/: Db4objects.Db4o.Data.Services-2008.csproj  Db4objects.Db4o.Data.Services-2010.csproj
lib/db4o-net/Db4objects.Db4o.Data.Services.Tests/Db4objects.Db4o.Data.Services.Tests/: AllTests.cs  Db4oDataContextTestCase.cs
lib/db4o-net/Db4objects.Db4o.Instrumentation/: Db4objects.Db4o.Instrumentation-2008.csproj  Db4objects.Db4o.Instrumentation-2010.csproj  Db4objects.Db4o.Instrumentation-CF-2008.csproj
lib/db4o-net/Db4objects.Db4o.Linq/: Db4objects.Db4o.Linq-2008.csproj  Db4objects.Db4o.Linq-2010.csproj  Db4objects.Db4o.Linq-CF-2008.csproj  Db4objects.Db4o.Linq-Silverlight-2008.csproj  Db4objects.Db4o.Linq-Silverlight-2010.csproj
lib/db4o-net/Db4objects.Db4o.Linq.Instrumentation.Tests/: Program.cs
lib/db4o-net/Db4objects.Db4o.Linq.Tests/: Db4objects.Db4o.Linq.Tests-2008.csproj  Db4objects.Db4o.Linq.Tests-2010.csproj  Db4objects.Db4o.Linq.Tests-CF-2008.csproj  Db4objects.Db4o.Linq.Tests-Silverlight-2008.csproj  Db4objects.Db4o.Linq.Tests-Silverlight-2010.csproj
lib/db4o-net/Db4objects.Db4o.NativeQueries/: Db4objects.Db4o.NativeQueries-2008.csproj  Db4objects.Db4o.NativeQueries-2010.csproj  Db4objects.Db4o.NativeQueries-CF-2008.csproj
lib/db4o-net/Db4objects.Db4o.Optional/: Db4objects.Db4o.Optional-2008.csproj  Db4objects.Db4o.Optional-2010.csproj  Db4objects.Db4o.Optional-CF-2008.csproj  Db4objects.Db4o.Optional-Silverlight-2008.csproj  Db4objects.Db4o.Optional-Silverlight-2010.csproj
lib/db4o-net/Db4objects.Db4o.Silverlight.TestStart/: Db4objects.Db4o.Silverlight.TestStart-2010.csproj
lib/db4o-net/Db4objects.Db4o.SilverlightTestHost/: Db4objects.Db4o.SilverlightTestHost-2010.csproj
lib/db4o-net/Db4objects.Db4o.Tests/: Db4objects.Db4o.Tests-2008.csproj  Db4objects.Db4o.Tests-2010.csproj  Db4objects.Db4o.Tests-CF-2008.csproj  Db4objects.Db4o.Tests-Silverlight-2008.csproj  Db4objects.Db4o.Tests-Silverlight-2010.csproj
lib/db4o-net/drs/: readme.html
lib/db4o-net/drs/QuickStart/: QuickStart-2008.csproj
lib/messagingmenu-sharp/: .gitignore  AssemblyInfo.cs.in  Makefile.am  autogen.sh  configure.ac  messagingmenu-sharp-api.raw  messagingmenu-sharp.dll.config  messagingmenu-sharp.doap  messagingmenu-sharp.pc.in  messagingmenu-sharp.snk
po-Engine/: POTFILES.skip
(+2442 files in other folders)
